[package]
name = "tokio-interruptible-future"
version = "0.1.0"
edition = "2021"
description = "Easily interrupt async code in given check points. It's useful to interrupt threads/fibers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["sync", "macros"] }
async-trait = "0.1"

[dev-dependencies]
futures = "0.3.19"
