[package]
name = "tokio-interruptible-future"
version = "8.1.0"
edition = "2021"
description = "Easily interrupt async code in given check points. It's useful to interrupt threads/fibers."
authors = ["Victor Porton"]
license = "Apache-2.0"
repository = "https://github.com/vporton/tokio-interruptible-future"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "macros"] }
futures = "0.3.19"
async-channel = "1.6.1"

[dev-dependencies]
